feat(feature/s-18): pom.xml